-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.0, 5.3.1, 5.3.2, 5.4.0
-
ANGLE, Qt5.3.1, VS2008, Windows 8.1, Intel GMA (DX11)
-
85620bd788d351018e9fa0b0f567b19a773be52b
On some Windows machines, suspending the computer or going to the login screen (by hitting Ctrl-Alt-Del) "breaks" QtQuick. Windows appear blank and the situation is only recoverable by restarting the application.
Reproduction: We are using a laptop (DELL Latitude E7240 w/ Intel GMA) that requires a password to log in. It is configured to go to sleep when the laptop lid is closed, even if it is plugged in. Closing the lid thus triggers the laptop to go to the login screen on wake. We are using Qt 5.4.0 with MSVC2013 on Windows 8.1.
1. Using QtCreator, create a simple project based on "Qt Quick Application" (with three buttons).
2. Launch the program with a debugger.
3. Ensure the buttons are visible in a window, that the window can be resized and that the buttons continues to render properly.
4. Trigger sleep (in our case, we close the laptop lid).
5. Wake the computer from sleep, you should be asked to log in again.
6. Log in to the user account where the application was running.
Note: It may take several attempts before this reproduces on our end, but it usually happens after 2-3 tries. Just going to the "switch user" menu seems to make it more difficult to reproduce.
In Qt 5.3.2, the contents the of window appear to be random or blank and error messages are printed (the application keeps running):
(Qt:Warning) bool __thiscall QWindowsEGLContext::makeCurrent(class QPlatformSurface *): eglMakeCurrent() failed, eglError: 0x300e, this: 0x89590d0
In Qt 5.4 (OpenGL/Dynamic), the window becomes blank, but interacting with it or resizing it causes the application to crash.
In Qt 5.4 (ANGLE), the application crashes.
- is duplicated by
-
QTBUG-43188 Sequential Animation on Rotation will cause QQuickWidget (and entire application!) to go black after computer sleep.
-
- Closed
-
- relates to
-
QTBUG-29223 QtQuick 2.0 view crash after Windows security dialog (Ctrl+Alt+Del)
-
- Closed
-
-
QTBUG-41031 no text rendering on qml elements
-
- Closed
-
-
QTBUG-42240 Windows/Intel HD3000 : Crash when starting opengl application
-
- Closed
-
| For Gerrit Dashboard: QTBUG-43263 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 103128,4 | Update documentation on ANGLE. | 5.4 | qt/qtdoc | Status: MERGED | +2 | 0 |
| 103172,5 | Windows: Add GPU detection. | 5.4 | qt/qtbase | Status: ABANDONED | +2 | 0 |
| 103173,2 | WIP: Windows: Switch ANGLE renderer based on GPU. | 5.4 | qt/qtbase | Status: ABANDONED | +1 | 0 |
| 103255,2 | WIP: Windows: Choose OpenGL renderer based on GPU. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 103363,3 | Windows: Add GPU detection. | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 103364,3 | Windows: Add infrastructure to be able to a GL renderer based on GPU. | 5.4.1 | qt/qtbase | Status: MERGED | +2 | 0 |
| 103371,1 | qtdiag/Windows: Output GPU information similar to dxdiag. | 5.4 | qt/qttools | Status: ABANDONED | +2 | 0 |
| 103377,10 | Expose context loss | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 103380,10 | Handle context lost in the Windows render loop | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 103403,2 | qtdiag/Windows: Output GPU information similar to dxdiag. | 5.4.1 | qt/qttools | Status: MERGED | +2 | 0 |
| 103750,1 | WIP: Windows: Force GL renderer to ANGLE/warp for older versions of "Intel(R) HD Graphics 4400". | 5.4.1 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 104249,1 | Expose context loss | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 105524,3 | WIP : Add support for GPU bug list reading. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 105604,1 | WIP: Windows: Use QVersionNumber in GPU driver version. | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 105915,4 | Windows: Use QVersionNumber in GPU driver version. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 105916,6 | Add support for GPU bug list reading. | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 108086,10 | windows: Introduce a built-in GPU blacklist | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |
| 110202,1 | Windows: remove desktop OpenGL blacklist for PCI device id 0x0A16 | 5.5 | qt/qtbase | Status: ABANDONED | -2 | 0 |
| 110230,5 | windows: Add a version test to the Intel HD blacklist | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |